Updated for Javadoc, documentation and comments